--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/
 spring.datasource.url=jdbc:mysql://localhost:3306/viagens?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=09021999
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.mvc.view.prefix:/WEB-INF/jsp/
