Required request part 'arquivo' is not present

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driverClassName= com.mysql.jdbc.Driver
 logging.level.org.springframework=TRACE
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
-spring.servlet.multipart.enabled=true
+spring.servlet.multipart.enabled=false
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
