Upload de varias fotos e roteiro das viagens funcionando, ver valor JS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
-spring.servlet.multipart.max-file-size=200MB
+spring.http.multipart.max-file-size=500000KB
+spring.http.multipart.max-request-size=500000KB
