Listando viagens na pagina inicial, fazer botoes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
-spring.http.multipart.max-file-size=500000KB
-spring.http.multipart.max-request-size=500000KB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
