--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
 	</properties>
 
 	<dependencies>
-		 <dependency>
-	      <groupId>org.springframework.boot</groupId>
-	      <artifactId>spring-boot-devtools</artifactId>
-	      <scope>runtime</scope>
-	      <optional>true</optional>
-	    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -117,7 +117,12 @@
 			<artifactId>core</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.10.0</version>
+		</dependency>
+
 
 	</dependencies>
 
